landing.css
.img_hodu {
    height: 40px;
    width: auto;
    margin: 16px 0;
    align-self: flex-start;
}

.img-main-bg {
    width: 300px;
    position: absolute;
    right: 0;
    bottom: -20px;
}

.img-cat {
    width: 100%;
    aspect-ratio: 1;
    border-radius: 50px;
    object-fit: cover;
    margin: 12px 0;
}

.menu-horz-flex {
    display: flex;
    
    justify-content: center;
    list-style-type: none;
    overflow: hidden;
    gap: 20px;
}

.menu-horz-flex li {
    margin: 0 0;
    padding: 0 12px;
    align-self: center;
}

.menu-horz-flex a {
    color: black;
    text-decoration: none;
}

.div-horz-flex  {
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
    place-content: space-between;
}

.div-flex {
    display: flex;
    flex-direction: column;
    justify-content: center;
    grid-column: span 3;
}

.grid-item {
    column-span: 1;
    row-span: 1;
}

.div-grid {
    display: grid;
    flex-direction: column;
    justify-content: space-between;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
}

.btn-highlight {
    background: #D97652;
    border-radius: 30px;
    border-width: 0;
    padding: 10px 24px;
    color: white;
    font-weight: 700;
}

.btn-highlight:hover {
    background: #db8a6d;
    cursor: pointer;
}

.btn-social {
    background: #F29D52;
    border-radius: 1000px;
    padding: 5px 5px;
    margin: 0 5px;
    border-width: 0;
}

.div-framer {
    max-width: 85%;
    margin: 20px 0;
    flex: 0 1 1000px;
}

.article-popout {
    position: relative;
    bottom: 100px;
    background: #263140;
    color: white;
    border-radius: 32px;
    padding: 12px 50px;
    margin: 20px 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.form-subscribe {
    align-self: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    background: white;
    border-radius: 32px;
    padding: 5px 10px;
    width: 50%;
}

.form-subscribe > input {
    border-width: 0;
    flex: 1 1 auto;
}

.form-subscribe > label {
    display: flex;
    justify-content: center;
    padding: 0 12px;
}

section, header, footer {
    text-align: center;
    justify-content: center;
    display: flex;
    flex-direction: row;
}

.h2-main {
    font: 48px Arial, sans-serif;
    font-weight: 700;
    margin-top: 100px;
}

.h2-sub {
    font: 24px Arial, sans-serif;
    font-weight: 700;
    color: #D97652;
}

.h2-subscribe {
    font: 24px Arial, sans-serif;
    font-weight: 700;
}

em {
    font: 24px Arial, sans-serif;
    font-weight: 700;
}

h2 {
    font: 32px Cattys, sans-serif;
    font-weight: 500;
    align-self: flex-start;
    margin: 16px 0;
}

h1 {
    display: none;
}

p {
    align-self: flex-start;
    margin: 16px 0;
}

table {
    table-layout: fixed;
    white-space: normal
}

tr, td {
    margin: 5px;
}

.article-flex-center {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-content: center;
    
}

article {
    text-align: left;
}

@media screen and (max-width: 420px)
{
    .div-flex {
        flex-direction: column;
    }
}

@font-face {
    font-family: "Cattys";
    src: url('assets/fonts/Cattys-WyEnE.otf');
    format('opentype');
    font-weight: normal;
    font-style: normal;
}

